updated nav to work

--- a/views/search-results.jade
+++ b/views/search-results.jade
@@ -47,11 +47,11 @@ body
                            div.form-group
                               input.form-control#nav-user-search-input(type="text", placeholder="Search")
                               label.form-label(for="nav-isbn") ISBN:
-                              input.form-input#nav-isbn(type="radio", name="nav-form", value="ISBN")
+                              input.form-input#nav-isbn(type="radio", name="nav-form-radio", value="ISBN")
                               label.form-label(for="nav-author") Author:
-                              input.form-input#nav-author(type="radio", name="nav-form", value="author")
+                              input.form-input#nav-author(type="radio", name="nav-form-radio", value="author")
                               label.form-label(for="nav-user") User:
-                              input.form-input#nav-user(type="radio", name="nav-form", value="user")
+                              input.form-input#nav-user(type="radio", name="nav-form-radio", value="user")
                            button.btn.btn-default(type="submit") Search
          ul.nav.navbar.navbar-right
             li
