--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,7 @@ body
       div.container
          div.row
             div.col-lg-6.feature
-               i.fa.fa-usd
+               i.fa.fa-book
                p.text-center Use Book Club to display your collection online!
             div.col-lg-6.feature
                i.fa.fa-bookmark
